@@ -1,0 +1,6 @@
+#!/usr/bin/ruby -w
+
+# T_336pgs_misdetected_as_dv
+describe "mkvmerge / PGS suptitles mis-detected as DV (digital video)"
+
+test_identify "data/subtitles/pgs/pgs-misdetected-as-dv.pgs"
