@@ -1,3 +1,8 @@
+2012-02-22  Moritz Bunkus  <moritz@bunkus.org>
+
+	* mkvmerge: bug fix: Fixed mis-detection as unsupported DV files
+	(happened for e.g. PGS subtitle files).
+
 2012-02-12  Moritz Bunkus  <moritz@bunkus.org>
 
 	* doc: enhancement: Updates for option file usage and supported
